# geospatial-data-registration-toolkit

./: LICENSE  README.md  pyproject.toml
GDRT/: constants.py  geospatial_utils.py  harmonizing.py
GDRT/raster/: image_registration.py  register_images.py  registration_algorithms.py  utils.py
dev/: register_CHMs.ipynb  register_DSMs.ipynb  register_orthos.ipynb  visualize_QGIS_GCPs.ipynb
